# ai-story-writer

./: .gitignore  README.md  pyproject.toml
ai_story_writer/: cli.py  server.py  setup.py
ai_story_writer/clients/: __init__.py  __llm_client__.py  anthropic.py  google.py  ollama.py  openai.py
ai_story_writer/data/: chapter.py  story.py
ai_story_writer/lib/: chapter.py  chapters.py  llm.py  story.py  web_ui.py
ai_story_writer/routes/: __init__.py  chapters.py  models.py  stories.py
ai_story_writer/types/: __init__.py  chapter.py  config.py  events.py  llm_client.py  model.py  requests.py  responses.py  story.py  web_ui.py
ai_story_writer/utils/: cli.py  id.py
config/defaults/: models.json
config/defaults/templates/: default-full.jinja  default.jinja  default.md
