[tool.poetry]
name = "ai-story-writer"
version = "0.1.0"
description = ""
authors = ["Yue Wu <wuyuejl97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^2.3.0"
anthropic = "^0.69.0"
google-genai = "^1.43.0"
pydantic = "^2.12.0"
fastapi = {extras = ["standard"], version = "^0.118.3"}
jinja2 = "^3.1.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.poetry.scripts]
cli = 'ai_story_writer.cli:start'

[tool.ruff.format]
quote-style = 'single'
