[project]
name = "ai-story-writer"
version = "0.1.0"
description = ""
authors = [{ name = "Yue Wu", email = "wuyuejl97@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
dependencies = [
    "openai>=2.3.0,<3",
    "anthropic>=0.69.0,<0.70",
    "google-genai>=1.43.0,<2",
    "pydantic>=2.12.0,<3",
    "fastapi[standard]>=0.118.3,<0.119",
    "jinja2>=3.1.6,<4",
    "sqlalchemy>=2.0.44,<3",
]

[project.scripts]
cli = "ai_story_writer.cli:start"

[dependency-groups]
dev = ["ruff>=0.14.0,<0.15"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = 'single'
